# headphone-data

./: .gitignore  pyproject.toml
src/: constants.py  decors.py  frequency_graph_scraper.py  get_data_weba.py  open_image.py  parse_data.py  scrape_product_page.py  start_imglink_scrape.py
src/data/: db_main.py  headphone_db_query.py  images_db_query.py  sql_query.py  user_query.py
tests/: test_main.py
